<resources>
    <string name="app_name">ASSIST</string>
    <string name="Main">Calender</string>
    <string name="club">Club</string>
    <string name="campus_map">Campus Map</string>
    <string name="cgpa_calculator">CGPA Calculator</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="subject1">Subject1</string>
    <string name="subject2">Subject2</string>
    <string name="subject3">Subject3</string>
    <string name="subject4">Subject4</string>
    <string name="subject5">Subject5</string>
    <string name="subject6">Subject6</string>
    <string name="subject7">Subject7</string>
    <string name="subject8">Subject8</string>
    <string name="subject9">Subject9</string>
    <string name="marks_obtained">Marks Obtained</string>
    <string name="max_marks">Max Marks</string>
    <string name="grade_points">Grade Points</string>
    <string name="submit">Submit</string>
    <string name="blank" />
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="todo">TODO</string>
    <string name="library">Library</string>
    <string name="downloads">Downloads</string>
    <string name="hardware">Hardware Club</string>
    <string name="hardwarepres">Club President: Shashwat Shankar</string>
    <string name="hardwarecont">Contact:hardwareclub.sbu@gmail.com</string>
    <string name="gamiconname">Gamicon Club</string>
    <string name="gamiconpres">Club President: Prabhat Gupta</string>
    <string name="gamiconcontact">Contact: Club_gaming@yahoo.com</string>
    <string name="codingtitle">Coding Club</string>
    <string name="saif">Saif Ali Shaik</string>
    <string name="contsaif">saif@workmail.com</string>
    <string name="msctitle">Microsoft Campus Club</string>
    <string name="mscpres">Rachakonda Sai Vaishnavi</string>
    <string name="msccontact">rachakonda.sv@gmail.com</string>
    <string name="dsctitle">Developer Student Club</string>
    <string name="cogtitle">Cognizant Student Club</string>
    <string name="invalid">No/Invalid input; if sub9 does not exist, give values =0</string>
    <string name="range">Marks/Grade points not in range</string>
    <string name="lessthan">Marks obtained is less than Max Marks</string>
    <string name="programming">Programming Languages</string>
    <string name="welcome">Welcome, </string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="signout">Signout</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
