<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fastScrollEnabled="true">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.CGPA"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/s1"
        android:layout_width="107dp"
        android:layout_height="45dp"

        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/subject1"
        android:inputType="number|numberDecimal"
        android:maxLength="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/s2"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/subject2"
        android:inputType="number|numberDecimal"
        android:maxLength="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s1" />

    <EditText
        android:id="@+id/s3"
        android:layout_width="107dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:layout_height="45dp"
        android:ems="10"
        android:maxLength="3"
        android:hint="@string/subject3"
        android:textAlignment="center"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s2" />

    <EditText
        android:id="@+id/s4"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:ems="10"
        android:hint="@string/subject4"
        android:textAlignment="center"
        android:inputType="number|numberDecimal"
        android:maxLength="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s3" />

    <EditText
        android:id="@+id/s5"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:ems="10"
        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:textAlignment="center"
        android:hint="@string/subject5"
        android:inputType="number|numberDecimal"
        android:maxLength="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s4" />

    <EditText
        android:id="@+id/s6"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:ems="10"
        android:textAlignment="center"
        android:maxLength="3"
        android:hint="@string/subject6"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s5" />

    <EditText
        android:id="@+id/s7"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:ems="10"
        android:hint="@string/subject7"
        android:textAlignment="center"
        android:inputType="number|numberDecimal"
        android:maxLength="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s6" />

    <EditText
        android:id="@+id/s8"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:ems="10"
        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:hint="@string/subject8"
        android:textAlignment="center"
        android:inputType="number|numberDecimal"
        android:maxLength="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s7" />

    <EditText
        android:id="@+id/s9"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:ems="10"
        android:hint="@string/subject9"
        android:textAlignment="center"
        android:inputType="number|numberDecimal"
        android:maxLength="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/marks_obtained"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sp1"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:background="@drawable/editshape"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/g1"
        app:layout_constraintStart_toEndOf="@+id/s1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/sp2"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/editshape"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintStart_toEndOf="@+id/s2"
        app:layout_constraintTop_toBottomOf="@+id/sp1" />

    <Spinner
        android:id="@+id/sp3"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/editshape"
        android:textAlignment="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/g3"
        app:layout_constraintStart_toEndOf="@+id/s3"
        app:layout_constraintTop_toBottomOf="@+id/sp2" />

    <Spinner
        android:id="@+id/sp4"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:textAlignment="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/editshape"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/g4"
        app:layout_constraintStart_toEndOf="@+id/s4"
        app:layout_constraintTop_toBottomOf="@+id/sp3" />

    <Spinner
        android:id="@+id/sp5"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/editshape"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/g5"
        app:layout_constraintStart_toEndOf="@+id/s5"
        app:layout_constraintTop_toBottomOf="@+id/sp4" />

    <Spinner
        android:id="@+id/sp6"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/editshape"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/g6"
        app:layout_constraintStart_toEndOf="@+id/s6"
        app:layout_constraintTop_toBottomOf="@+id/sp5" />

    <Spinner
        android:id="@+id/sp7"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/editshape"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/g7"
        app:layout_constraintStart_toEndOf="@+id/s7"
        app:layout_constraintTop_toBottomOf="@+id/sp6" />

    <Spinner
        android:id="@+id/sp8"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:background="@drawable/editshape"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/g8"
        app:layout_constraintStart_toEndOf="@+id/s8"
        app:layout_constraintTop_toBottomOf="@+id/sp7" />

    <Spinner
        android:id="@+id/sp9"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:textAlignment="center"
        android:background="@drawable/editshape"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/g9"
        app:layout_constraintStart_toEndOf="@+id/s9"
        app:layout_constraintTop_toBottomOf="@+id/sp8" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:text="@string/max_marks"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/g1"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/editshape"
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/g2"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/blank"
        android:background="@drawable/editshape"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g1" />

    <EditText
        android:id="@+id/g3"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/blank"
        android:background="@drawable/editshape"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g2" />

    <EditText
        android:id="@+id/g4"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/editshape"
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g3" />

    <EditText
        android:id="@+id/g5"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/blank"
        android:background="@drawable/editshape"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g4" />

    <EditText
        android:id="@+id/g6"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:background="@drawable/editshape"
        android:hint="@string/blank"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g5" />

    <EditText
        android:id="@+id/g7"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/blank"
        android:background="@drawable/editshape"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g6" />

    <EditText
        android:id="@+id/g8"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/blank"
        android:textAlignment="center"
        android:background="@drawable/editshape"
        android:inputType="number"
        android:maxLength="1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g7" />

    <EditText
        android:id="@+id/g9"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/editshape"
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/grade_points"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitt"
        android:layout_width="278dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="#CB0073"
        android:text="@string/submit"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp9" />

    <TextView
        android:id="@+id/cgpa"
        android:layout_width="214dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/editshape"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/submitt"
        app:layout_constraintStart_toStartOf="@+id/submitt"
        app:layout_constraintTop_toBottomOf="@+id/submitt"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
</ScrollView>